--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -733,6 +733,73 @@
             </objects>
             <point key="canvasLocation" x="1158.0152671755725" y="-13.380281690140846"/>
         </scene>
+        <!--Alarm View Controller-->
+        <scene sceneID="elF-kG-b8B">
+            <objects>
+                <viewController id="l2r-zT-1ge" customClass="AlarmViewController" customModule="WorkoutCycle" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="PLv-J5-BhE">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="3ez-b1-GFP">
+                                <rect key="frame" x="20" y="64" width="353" height="173"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="184" translatesAutoresizingMaskIntoConstraints="NO" id="9cS-fW-tj2">
+                                        <rect key="frame" x="0.0" y="0.0" width="353" height="31"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알람" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gds-cg-4Jm">
+                                                <rect key="frame" x="0.0" y="0.0" width="120" height="31"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lcW-P4-6jE">
+                                                <rect key="frame" x="304" y="0.0" width="51" height="31"/>
+                                                <connections>
+                                                    <action selector="alarmSwitch:" destination="l2r-zT-1ge" eventType="valueChanged" id="y7h-CC-VqP"/>
+                                                </connections>
+                                            </switch>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="1lc-pp-gla">
+                                        <rect key="frame" x="0.0" y="51" width="353" height="122"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알람 시간 설정" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TW6-bg-e8b">
+                                                <rect key="frame" x="0.0" y="51" width="97" height="20.333333333333329"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" style="compact" translatesAutoresizingMaskIntoConstraints="NO" id="YmG-p7-TPb">
+                                                <rect key="frame" x="97" y="0.0" width="256" height="122"/>
+                                                <connections>
+                                                    <action selector="alarmDatePicker:" destination="l2r-zT-1ge" eventType="valueChanged" id="Wp3-Mn-nl9"/>
+                                                </connections>
+                                            </datePicker>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="5Bs-li-chV"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="3ez-b1-GFP" firstAttribute="top" secondItem="5Bs-li-chV" secondAttribute="top" constant="20" id="70v-uC-4w9"/>
+                            <constraint firstItem="5Bs-li-chV" firstAttribute="trailing" secondItem="3ez-b1-GFP" secondAttribute="trailing" constant="20" id="g5a-HI-o8R"/>
+                            <constraint firstItem="3ez-b1-GFP" firstAttribute="leading" secondItem="5Bs-li-chV" secondAttribute="leading" constant="20" id="rTD-Bh-2xG"/>
+                            <constraint firstItem="5Bs-li-chV" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="3ez-b1-GFP" secondAttribute="bottom" constant="50" id="t3E-f1-Pzg"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="aqX-yz-5hm"/>
+                    <connections>
+                        <outlet property="alarmDatePicker" destination="YmG-p7-TPb" id="FGe-8R-J2H"/>
+                        <outlet property="alarmSwitch" destination="lcW-P4-6jE" id="pad-6p-fpQ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MSn-Ba-fWH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1774.8091603053435" y="3124.6478873239439"/>
+        </scene>
         <!--Announcement View Controller-->
         <scene sceneID="j5b-0K-x5H">
             <objects>
@@ -745,12 +812,21 @@
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AnnouncementViewController" id="9ZH-Je-PW3">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AnnouncementViewController" textLabel="XJn-vb-JEW" style="IBUITableViewCellStyleDefault" id="9ZH-Je-PW3">
                                         <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9ZH-Je-PW3" id="7AP-Fu-Net">
                                             <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="XJn-vb-JEW">
+                                                    <rect key="frame" x="20" y="0.0" width="353" height="43.666667938232422"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
@@ -772,7 +848,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UZE-8o-dNK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1585" y="3113"/>
+            <point key="canvasLocation" x="-976" y="3113"/>
         </scene>
         <!--이용약관-->
         <scene sceneID="wL9-Uu-Uof">
@@ -782,8 +858,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이용약관" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LU8-dN-30C">
-                                <rect key="frame" x="0.0" y="44" width="393" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LU8-dN-30C">
+                                <rect key="frame" x="0.0" y="44" width="393" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -801,7 +877,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eN6-fa-7qe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-792" y="3104"/>
+            <point key="canvasLocation" x="-251" y="3113"/>
         </scene>
         <!--개발자 연락처-->
         <scene sceneID="c5K-4d-Abw">
@@ -865,7 +941,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LwU-pG-XYH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-8" y="3113"/>
+            <point key="canvasLocation" x="488" y="3113"/>
         </scene>
         <!--설정-->
         <scene sceneID="1oj-xA-XSD">
@@ -931,6 +1007,7 @@
                         <segue destination="xV4-ej-NZB" kind="show" identifier="announcementSegue" id="RnC-lM-FC7"/>
                         <segue destination="b51-SM-Bxr" kind="show" identifier="developerSegue" id="iEt-vq-6d1"/>
                         <segue destination="Sn2-0v-0kh" kind="show" identifier="termofUseSegue" id="bdo-OO-zej"/>
+                        <segue destination="l2r-zT-1ge" kind="show" identifier="alramSegue" id="NoQ-WS-l6H"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ogc-ep-vTh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
