--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yfa-Dr-60x">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+    <device id="retina6_12" orientation="portrait" appearance="dark"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -129,7 +129,7 @@
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1k5-nF-QQK">
                                                             <rect key="frame" x="69.999999999999986" y="22" width="249.66666666666663" height="21"/>
                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
-                                                            <nil key="textColor"/>
+                                                            <color key="textColor" systemColor="secondaryLabelColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
@@ -160,7 +160,7 @@
                                         <connections>
                                             <outlet property="recommendLabel" destination="1k5-nF-QQK" id="ELE-lW-yrK"/>
                                             <outlet property="recommendWorkImage" destination="Ab2-3d-KI7" id="odw-2Y-RpD"/>
-                                            <segue destination="6tj-MG-5G4" kind="show" id="Gek-u8-N3p"/>
+                                            <segue destination="6tj-MG-5G4" kind="show" identifier="RecommendSegue" id="Gek-u8-N3p"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -200,6 +200,7 @@
                     <navigationItem key="navigationItem" id="vQv-EV-Qsj"/>
                     <connections>
                         <outlet property="pickCollectionView" destination="2A1-ma-zfm" id="UZk-Dk-Vj2"/>
+                        <outlet property="recommendTableView" destination="Jfr-Wf-CSc" id="JZJ-6H-CKP"/>
                         <outlet property="workcyclePageControl" destination="SdL-Ta-cSv" id="n2X-xv-H7K"/>
                     </connections>
                 </viewController>
@@ -207,30 +208,91 @@
             </objects>
             <point key="canvasLocation" x="3072.5190839694656" y="-13.380281690140846"/>
         </scene>
-        <!--View Controller-->
+        <!--Set Detail View Controller-->
         <scene sceneID="ay8-GO-AH2">
             <objects>
-                <viewController id="6tj-MG-5G4" sceneMemberID="viewController">
+                <viewController id="6tj-MG-5G4" customClass="SetDetailViewController" customModule="WorkoutCycle" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4K2-8K-GZk">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q6R-3o-E2L">
-                                <rect key="frame" x="175" y="63" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="workRecommend" translatesAutoresizingMaskIntoConstraints="NO" id="Fbb-wL-eZ6">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                            </imageView>
+                            <view alpha="0.90000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SGX-kT-oxQ" customClass="RoundedView" customModule="WorkoutCycle" customModuleProvider="target">
+                                <rect key="frame" x="15" y="611.66666666666663" width="363" height="60.666666666666629"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="초보자를 위한 루틴" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ywk-nJ-7d2">
+                                        <rect key="frame" x="5" y="10" width="353" height="40.666666666666664"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="34"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemGrayColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="ywk-nJ-7d2" secondAttribute="trailing" constant="5" id="207-FB-cpt"/>
+                                    <constraint firstItem="ywk-nJ-7d2" firstAttribute="top" secondItem="SGX-kT-oxQ" secondAttribute="top" constant="10" id="2Hc-6A-esf"/>
+                                    <constraint firstAttribute="bottom" secondItem="ywk-nJ-7d2" secondAttribute="bottom" constant="10" id="3E3-AF-MaJ"/>
+                                    <constraint firstItem="ywk-nJ-7d2" firstAttribute="centerX" secondItem="SGX-kT-oxQ" secondAttribute="centerX" id="9XZ-ys-Ueu"/>
+                                    <constraint firstItem="ywk-nJ-7d2" firstAttribute="leading" secondItem="SGX-kT-oxQ" secondAttribute="leading" constant="5" id="J0H-gm-A3Y"/>
+                                    <constraint firstItem="ywk-nJ-7d2" firstAttribute="centerY" secondItem="SGX-kT-oxQ" secondAttribute="centerY" id="Z3O-PB-cVw"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <view alpha="0.90000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P7q-qx-6at" customClass="RoundedView" customModule="WorkoutCycle" customModuleProvider="target">
+                                <rect key="frame" x="15" y="692.33333333333337" width="363" height="139.66666666666663"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="균형있는 운동: 5분할은 다양한 근육 그룹을 포함하는 균형 잡힌 운동을 할 수 있도록 도와줍니다. 다양한 부위의 근육을 동일하게 발달시키면서도 부상의 위험을 줄일 수 있습니다." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ioj-90-1Nh">
+                                        <rect key="frame" x="10" y="10.000000000000007" width="343" height="119.66666666666669"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemGrayColor"/>
+                                <constraints>
+                                    <constraint firstItem="Ioj-90-1Nh" firstAttribute="top" secondItem="P7q-qx-6at" secondAttribute="top" constant="10" id="JEJ-FV-ewf"/>
+                                    <constraint firstAttribute="bottom" secondItem="Ioj-90-1Nh" secondAttribute="bottom" constant="10" id="L2Q-oA-AQB"/>
+                                    <constraint firstAttribute="trailing" secondItem="Ioj-90-1Nh" secondAttribute="trailing" constant="10" id="Zo3-A8-HED"/>
+                                    <constraint firstItem="Ioj-90-1Nh" firstAttribute="leading" secondItem="P7q-qx-6at" secondAttribute="leading" constant="10" id="Zuu-0h-4Pr"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Zyn-Qh-BfZ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Fbb-wL-eZ6" firstAttribute="trailing" secondItem="Zyn-Qh-BfZ" secondAttribute="trailing" id="3bI-wD-PCy"/>
+                            <constraint firstItem="Fbb-wL-eZ6" firstAttribute="leading" secondItem="Zyn-Qh-BfZ" secondAttribute="leading" id="7E7-6z-13k"/>
+                            <constraint firstItem="Fbb-wL-eZ6" firstAttribute="top" secondItem="4K2-8K-GZk" secondAttribute="top" id="BhK-dU-pdR"/>
+                            <constraint firstItem="SGX-kT-oxQ" firstAttribute="leading" secondItem="Zyn-Qh-BfZ" secondAttribute="leading" constant="15" id="U2i-XE-XHL"/>
+                            <constraint firstItem="Zyn-Qh-BfZ" firstAttribute="bottom" secondItem="P7q-qx-6at" secondAttribute="bottom" constant="20" id="aQA-2w-Dsq"/>
+                            <constraint firstAttribute="bottom" secondItem="Fbb-wL-eZ6" secondAttribute="bottom" id="gQn-b1-kBd"/>
+                            <constraint firstItem="P7q-qx-6at" firstAttribute="trailing" secondItem="SGX-kT-oxQ" secondAttribute="trailing" id="iXl-xq-3Gr"/>
+                            <constraint firstItem="SGX-kT-oxQ" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Zyn-Qh-BfZ" secondAttribute="top" constant="297" id="l7o-Ih-qjj"/>
+                            <constraint firstItem="Zyn-Qh-BfZ" firstAttribute="trailing" secondItem="SGX-kT-oxQ" secondAttribute="trailing" constant="15" id="oni-jL-KZP"/>
+                            <constraint firstItem="P7q-qx-6at" firstAttribute="leading" secondItem="SGX-kT-oxQ" secondAttribute="leading" id="qIb-Wm-BcP"/>
+                            <constraint firstItem="P7q-qx-6at" firstAttribute="top" secondItem="SGX-kT-oxQ" secondAttribute="bottom" constant="20" id="smb-7E-Lsn"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="lgY-Tu-TEH"/>
+                    <connections>
+                        <outlet property="contextLabel" destination="Ioj-90-1Nh" id="P7M-T5-UrW"/>
+                        <outlet property="detailRecommendLabel" destination="ywk-nJ-7d2" id="wKd-ov-nxx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n7u-ju-2Ta" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3083" y="745"/>
+            <point key="canvasLocation" x="3081.679389312977" y="744.36619718309862"/>
         </scene>
         <!--상세 분할 부위-->
         <scene sceneID="91a-dP-fIt">
@@ -1231,7 +1293,7 @@
         </designable>
     </designables>
     <inferredMetricsTieBreakers>
-        <segue reference="7kH-8Y-Fws"/>
+        <segue reference="WfW-8A-Hq3"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="WorkoutCycleIcon" width="512" height="512"/>
@@ -1243,9 +1305,13 @@
         <image name="gmail" width="512" height="512"/>
         <image name="list.bullet.clipboard" catalog="system" width="103" height="128"/>
         <image name="pencil" catalog="system" width="128" height="113"/>
+        <image name="workRecommend" width="2720" height="1813.5"/>
         <image name="workout10" width="3000" height="2000"/>
         <image name="workout4" width="924" height="1384"/>
         <image name="workout8" width="1365" height="2048"/>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
@@ -1254,6 +1320,9 @@
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
